--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
     <div class="container">
       <div class="row mt centered">
-        <h1>Напрямки</h1>
+        <h1>Основні стеки технологій</h1>
         <div class="col-lg-4 proc">
           <i class="fa fa-cogs"></i>
 		  <h3>VLSI(LC & PD)</h3>          
