--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h1 class="logo"><a href="#home" class="smoothscroll">Сторінка</a></h1>
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
-	  <a href="http://github.com//kozaknazar">Перейти до GitHub</a>
+	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com//kozaknazar">GitHub</a></h1>
+          <h1><a href="http://github.com/kozaknazar">GitHub</a></h1>
         </div>
       </div>
     </div>
