--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
            <div class="name-zig"></div>
 		   
         <!-- <h4>асистент кафедри</h4> -->
-        <h4>E-mail: nazar.kozak@mail.com</h4>
+        <!-- <h4>E-mail: nazar.kozak@mail.com</h4> -->
 
     
         <h3>Освіта</h3>
