--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/kozaknazar">GitHub</a></h1>
+          <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>
       </div>
     </div>
