--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
+      <a href="#home" class="smoothscroll">./</a>
+	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a>	    
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
@@ -56,6 +58,9 @@
         <div class="col-md-6 col-md-offset-3">
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>
+        <div class="col-md-6 col-md-offset-3">
+          <h1><a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a></h1>
+        </div>	      
       </div>
     </div>
   </div>
