--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
 
 		<h3>Основні публікації</h3>
         <ul>
+		    <li>Melnyk A. Simple universal translator as an alternative compiler-compiler / A. Melnyk, N. Kozak // Advances in Cyber-Physical Systems : [збірник наукових праць] / 2019. – (Vol. 4, Num. 2); </li>		
+		    <li>Melnyk A. Data correction using Hamming coding and hash function and its CUDA implementation / A. Melnyk, N. Kozak // Advances in Cyber-Physical Systems : [збірник наукових праць] / 2019. – (Vol. 4, Num. 2); </li>
 		    <li>Мельник А. Метод та засоби автоматичного генерування програмного коду для графічних прискорювачів обчислень / А. Мельник, Н. Козак // Комп’ютерні системи та компоненти : [збірник наукових праць] / 2016. – С. 6–11. – (Науковий вісник Чернівецького національного університету імені Юрія Федьковича ; Том 7, Вип.2.); </li>
             <li>Мельник А. Параметри системи макрокоманд для графічного прискорювача / А. Мельник, Н. Козак // Комп'ютерні системи та мережі : [збірник наукових праць] / Видавництво Львівської політехніки, 2016. – С. 48–53. – (Вісник / Національний університет "Львівська політехніка" ; № 857); </li>			
             <li>Мельник А. Підходи до програмування прискорювачів  обчислень / А. Мельник, Н. Козак // Комп'ютерні системи та мережі : [збірник наукових  праць] / Видавництво Львівської політехніки, 2015. – С. 68–74. – (Вісник /  Національний університет "Львівська політехніка" ; № 830); </li>
