--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#home" class="smoothscroll">./</a>
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
 	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a>	    
-	  <a href="https://github.com/KozakNazar1/acm2020">ACM(АМО)</a>		  
+	  <a href="http://github.com/KozakNazar1/acm2020">ACM(АМО)</a>		  
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
@@ -62,7 +62,7 @@
           <h1><a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="https://github.com/KozakNazar1/acm2020">ACM(АМО)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/acm2020">ACM(АМО)</a></h1>
         </div>		
       </div>
     </div>
