--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
-	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a>	    
+	  <a href="http://github.com/KozakNazar1/pdc2020">PDC(ПРО)</a>	    
 	  <a href="http://github.com/KozakNazar1/acm2020">ACM(АМО)</a>		  
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
@@ -59,7 +59,7 @@
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/sp2019_soft__12345">IDE</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/pdc2020">PDC(ПРО)</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
           <h1><a href="http://github.com/KozakNazar1/acm2020">ACM(АМО)</a></h1>
