--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
 	  <a href="http://github.com/KozakNazar1/pdc2020">PDC(ПРО)</a>	    
 	  <a href="http://github.com/KozakNazar1/acm2020">ACM(АМО)</a>		  
+	  <a href="http://github.com/KozakNazar1/oop2020">ACM(АМО)</a>		    
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
