--- a/scACM.html
+++ b/scACM.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <title>Moodle Quiz XHTML Export</title>
-<script type="text/javascript" src="http://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=VIgT9uOgByfzjxnatV3FP20VxTrbDpyHqgtQBHjhC6FK_VD7zV5sH1r9BA3yCkvMhw-x6wnPb08ApaKOsYXqSyRZt3Djhfk1Dtx4urocLcUmTjCJ4B_4KXMHHE6gcjCwID1MpoUUVyCTh8ZgEPp_YEzkar2PFmaDMqSu5qTAa1_ub5ZBIGvuDM9L9SB8wXpnByS8kiGZIhwmAQMa5313FfD_NRb216cHL9FYvlJrxoweFlqdrl2FNYVFx2M9hUM3ygBU8IcGmUjBFfA1JZ5j4lMaofpu6JstNRhF8tdYjbNpnjAfaylDTqv5SEAiY8LRRk7hcCn4hY-D81vAWdnBEPA3-J3Ezz8NNr9yP8rK5lGotnblEQ9x13VKVhuUjEfc5ZjIZlUiWKpyaeG0Ha9TW2c2QGWnkWp0bXA0a-9D7zUFxY4m9nFPg69P9m7JixkQILa2J4rBtTISVDlhMAQrUXN1rq7Kj_GldqyR8R0xnLn31aQX1LOSm584scPISORV" charset="UTF-8"></script><style type="text/css">
+<style type="text/css">
 body {
      font-family: verdana, helvetica, sans-serif;
      background-color: #fff;
