--- a/scACM.html
+++ b/scACM.html
@@ -30,7 +30,8 @@ body {
 <body>
 <form action="...REPLACE ME..." method="post">
 
-
+<a href="kozaknazar.github.io">kozaknazar.github.io</a>
+<a href="http://vns.lpnu.ua/">vns.lpnu.ua/</a>
 
 <!-- question: 1450049  name: Питання 1.2.1 -->
 <div class="question">
