--- a/scACM.html
+++ b/scACM.html
@@ -30,8 +30,8 @@ body {
 <body>
 <form action="...REPLACE ME..." method="post">
 
-<div><a href="kozaknazar.github.io">kozaknazar.github.io</a></div>
-<div><a href="http://vns.lpnu.ua/">vns.lpnu.ua/</a></div>
+<div><h1><a href="kozaknazar.github.io">kozaknazar.github.io</a><h1/></div>
+<div><h1><a href="http://vns.lpnu.ua/">vns.lpnu.ua/</a><h1/></div>
 
 <!-- question: 1450049  name: Питання 1.2.1 -->
 <div class="question">
