--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row">
         <div class="col-lg-8-offset-2 centered">
           <h1>НАВЧАЛЬНІ КУРСИ</h1>
-          <h3>Все необхідне для їх вивчення</h3>
+          <h3> * АМО * ТПП * МКС * КС * ПРО * ЗСП * СП * СПЗ * </h3>
           <p>Тут знаходяться навчальні матеріали, а також зразки сирцевого коду для виконання завдань</p>
         </div>
         <!-- /col-lg-8 -->
