--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
-	  <a href="http://github.com/KozakNazar1/pdc2020">PDC(ПРО)</a>	    
+	  <a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a>	    
+	  <a href="http://github.com/KozakNazar1/sp2021">SP(СП)</a>		    	    
 	  <a href="http://github.com/KozakNazar1/acm2021">ACM(АМО)</a>		  
-	  <a href="http://github.com/KozakNazar1/oop2020">OOP(ООП)</a>		    
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
@@ -60,10 +60,10 @@
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/pdc2020">PDC(ПРО)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/acm2021">ACM(АМО)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/sp2021">SP(СП)</a></h1>
         </div>		
       </div>
     </div>
