--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a href="#home" class="smoothscroll">./</a>
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
 	  <a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a>	    
-	  <a href="http://github.com/KozakNazar1/sp2021">SP(СП)</a>		    	    
+	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a>		    	    
 	  <a href="http://github.com/KozakNazar1/acm2021">ACM(АМО)</a>		  
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
@@ -63,7 +63,7 @@
           <h1><a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/sp2021">SP(СП)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a></h1>
         </div>		
       </div>
     </div>
