--- a/cpsss_labs.html
+++ b/cpsss_labs.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-  <p><a href="https://us04web.zoom.us/j/?pwd=TU5CdVE0aENPRzBQUWhYV1lLdkkvZz">link to zoom meeting</a></p>
+  <p><a href="https://us04web.zoom.us/j/77257898336?pwd=cENQYnlOOUtsZlEzVHRueEdLZ0xhUT09">link to zoom meeting</a></p>
 </head>
 <body> 
