--- a/sp_labs.html
+++ b/sp_labs.html
@@ -2,6 +2,6 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-  <p><a href="https://us04web.zoom.us/j/79214273065?pwd=TWxBNS84VkEwS09wVUFFaHl2eW4wQT09">link to zoom meeting</a></p>
+  <p><h1 href="https://us04web.zoom.us/j/79214273065?pwd=TWxBNS84VkEwS09wVUFFaHl2eW4wQT09">Click the link to join the Zoom Meeting</h1></p>
 </head>
 <body> 
