--- a/acm_lectures.html
+++ b/acm_lectures.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
+<!--  
   <p><h1><a href="https://us04web.zoom.us/j/76142100319?pwd=Y2J2aElaVjlyaithSkswRUc3N2cwZz09">Click the link to join the Zoom Meeting<a></h1></p>
+-->
+<p>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</p>
+
+<p>Рекомендується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України.</p>  
 </head>
 <body> 
