--- a/cs_labs.html
+++ b/cs_labs.html
@@ -7,6 +7,6 @@
 -->
 <p>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</p>
 
-<p>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України.</p>
+<p>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</p>
 </head>
 <body> 
