--- a/acm_lectures.html
+++ b/acm_lectures.html
@@ -5,8 +5,8 @@
 <!--  
   <p><h1><a href="https://us04web.zoom.us/j/76142100319?pwd=Y2J2aElaVjlyaithSkswRUc3N2cwZz09">Click the link to join the Zoom Meeting<a></h1></p>
 -->
-<p>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</p>
+<h1>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</h1>
 
-<p>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</p>
+<h1>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</h1>
 </head>
 <body> 
