--- a/acm_lectures.html
+++ b/acm_lectures.html
@@ -7,6 +7,7 @@
 -->
 <h1>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</h1>
 
-<h1>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</h1>
+<h2><i>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки,</i></h2>
+<h2><i>що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</i></h2>
 </head>
 <body> 
