--- a/acm_lectures.html
+++ b/acm_lectures.html
@@ -5,7 +5,7 @@
 <!--  
   <p><h1><a href="https://us04web.zoom.us/j/76142100319?pwd=Y2J2aElaVjlyaithSkswRUc3N2cwZz09">Click the link to join the Zoom Meeting<a></h1></p>
 -->
-<h2>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</h2>
+<h1>Оголошено канікули з 28 лютого до 12 березня 2022 року.</h1>
 
 <h2><i>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки,</i></h2>
 <h2><i>що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</i></h2>
