--- a/pdc_practs.html
+++ b/pdc_practs.html
@@ -5,8 +5,9 @@
 <!--
   <p><h1><a href="https://us04web.zoom.us/j/76364186423?pwd=d2lvSmhQK3FIWjYrVnYzS0cwZGZsZz09">Click the link to join the Zoom Meeting<a></h1></p>
 -->
-<p>Оголошено канікули <b>з 28 лютого до 12 березня 2022 року</b>.</p>
+<h1>Оголошено канікули з 28 лютого до 12 березня 2022 року.</h1>
 
-<p>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки, що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</p>
+<h2><i>Пропонується ознайомитися з рекомендаціями стосовно техніки безпеки,</i></h2>
+<h2><i>що розміщені на <a href="https://mon.gov.ua/ua/news/oprilyudneno-rekomendacii-shodo-dii-u-razi-nadzvichainoi-situacii" target="_blank"> сайті Міністерства освіти і науки України</a>.</i></h2>
 </head>
 <body> 
