--- a/cs_labs.html
+++ b/cs_labs.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<!--  
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8"> 
   <p><h1><a href="https://us04web.zoom.us/j/74334195011?pwd=NUZ2RkVHaWhqWXg5MHhlVUV0NjNNdz09">Click the link to join the Zoom Meeting</a></h1></p>
--->
-<h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1>
+<!-- <h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1> -->
 </head>
 <body> 
