--- a/pdc_practs.html
+++ b/pdc_practs.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<!--
   <p><h1><a href="https://us04web.zoom.us/j/76364186423?pwd=d2lvSmhQK3FIWjYrVnYzS0cwZGZsZz09">Click the link to join the Zoom Meeting<a></h1></p>
--->
-<h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1>
+<!-- <h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1> -->
 </head>
 <body> 
