--- a/pdc_labs.html
+++ b/pdc_labs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-  <h1>На кафедрі заплановане засідання, тому лабораторне заняття 25.03.2022 для першої підгрупи з ПРО розпочнеться о 15:30, за потреби заняття продовжимо.</h1>
+<!-- <h1>На кафедрі заплановане засідання, тому лабораторне заняття 25.03.2022 для першої підгрупи з ПРО розпочнеться о 15:30, за потреби заняття продовжимо.</h1> -->
   <p><h1><a href="https://us04web.zoom.us/j/76364186423?pwd=d2lvSmhQK3FIWjYrVnYzS0cwZGZsZz09">Click the link to join the Zoom Meeting</a></h1></p>
 <!-- <h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1> -->
 </head>
