--- a/acm_lectures.html
+++ b/acm_lectures.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-  <h1>17.05.2022 лекційне заняття для КІ-24, КІ-25 та КІ-26 розпочнеться о 16:00.</h1>  
+<!-- <h1>17.05.2022 лекційне заняття для КІ-24, КІ-25 та КІ-26 розпочнеться о 16:00.</h1> -->  
   <p><h1><a href="https://us04web.zoom.us/j/76142100319?pwd=Y2J2aElaVjlyaithSkswRUc3N2cwZz09">Click the link to join the Zoom Meeting<a></h1></p>
 <!-- <h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1> -->
 </head>
