--- a/cscad_lectures.html
+++ b/cscad_lectures.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<!-- <h1> -- </h1> -->  
-  <p><h1><a href="https://us04web.zoom.us/j/77171730982?pwd=M3FJbjBwbjFGKzl0MmlkdVNockl1QT09">Click the link to join the Zoom Meeting<a></h1></p>
+ <h1> Лекційні заняття розпочнуться з 23.08.2022 </h1> 
+<!-- <p><h1><a href="https://us04web.zoom.us/j/77171730982?pwd=M3FJbjBwbjFGKzl0MmlkdVNockl1QT09">Click the link to join the Zoom Meeting<a></h1></p> --> 
 <!-- <h1> -- </h1> -->
 </head>
 <body> 
