--- a/sp2_practs.html
+++ b/sp2_practs.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-  <p><h1><a href="https://us04web.zoom.us/j/76300128198?pwd=zWvGuXU_2toE7KerZA7babcj04nmBO.1">Click the link to join the Zoom Meeting<a></h1></p>
+  <h1>У зв'язку з тим, що на 12:00 заплановане засідання нашої кафедри, практичне заняття 23.11.2022 розпочнеться о 21:00.</h1>
+  <!-- <p><h1><a href="https://us04web.zoom.us/j/76300128198?pwd=zWvGuXU_2toE7KerZA7babcj04nmBO.1">Click the link to join the Zoom Meeting<a></h1></p> -->
 </head>
 <body> 
