--- a/pdc_labs_31.html
+++ b/pdc_labs_31.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<h1>У зв'язку з невідповідностями в розкладі, лабораторні заняття з ПРО для КІ-31 будуть відбуватися о 16:00(5-та пара). Ви також можете відвідувати заняття разом з КІ-32 о 14:15(4-та пара).</h1>
+<h1>У зв'язку з невідповідностями в розкладі, лабораторні заняття з ПРО для КІ-31 будуть відбуватися о 16:00(5-та пара). Ви також можете відвідувати заняття разом з КІ-32 о 14:45.</h1>
   <p><h1><a href="https://us04web.zoom.us/j/76364186423?pwd=d2lvSmhQK3FIWjYrVnYzS0cwZGZsZz09">Click the link to join the Zoom Meeting</a></h1></p>
 <!-- <h1>Оголошено канікули з 28 лютого до 19 березня 2022 року.</h1> -->
 </head>
