--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a></h1>
+          <h1><a href="https://github.com/KozakNazar1/ACM2024">ACM(АМО)</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/cpscad2021">АПКС/АПККФС(CPSCAD)</a></h1>
         </div>		
       </div>
     </div>
