--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h1><a href="https://github.com/KozakNazar1/ACM2024">ACM(АМО)</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/cpscad2021">АПКС/АПККФС(CPSCAD)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD(АПККФС/АПКС)</a></h1>
         </div>		
       </div>
     </div>
