--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
       <h1 class="logo"><a href="#home" class="smoothscroll">Сторінка</a></h1>
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
+	  <a href="http://github.com/KozakNazar1/acm2025">ACM(АМО)</a>	
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
-	  <a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD</a>	    
-	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a>		    	    
-	  <a href="http://github.com/KozakNazar1/acm2021">ACM(АМО)</a>		  
+	  <a href="http://github.com/KozakNazar1/cpscad2021">CSCAD</a>	    
+	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a>		    	    	  
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
       <a href="#about" class="smoothscroll">Викладач</a>	  
@@ -57,13 +57,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
+          <h1><a href="https://github.com/KozakNazar1/ACM2025">ACM(АМО)</a></h1>
         </div>
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="https://github.com/KozakNazar1/ACM2024">ACM(АМО)</a></h1>
+          <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CPSCAD(АПККФС/АПКС)</a></h1>
+          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CSCAD(АПКС)</a></h1>
         </div>		
       </div>
     </div>
