--- a/acm.html
+++ b/acm.html
@@ -9,7 +9,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Курс АМО</a>
+            <!-- <a class="navbar-brand" href="index.html">Головна</a> -->
+            <a class="navbar-brand" href="https://kozaknazar.github.io/">Головна</a>
+            <a class="navbar-brand" href="https://vns.lpnu.ua/">АМО на ВНС</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
