--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <h1 class="logo"><a href="#home" class="smoothscroll">Сторінка</a></h1>
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">./</a>
-	  <a href="http://github.com/KozakNazar1/acm2025">ACM(АМО)</a>	
+	  <!-- <a href="http://github.com/KozakNazar1/acm2025">ACM(АМО)</a> -->
+	  <a href="acm.html">ACM(АМО)</a>	
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
 	  <a href="http://github.com/KozakNazar1/cpscad2021">CSCAD</a>	    
 	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a>		    	    	  
@@ -57,7 +58,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="https://github.com/KozakNazar1/ACM2025">ACM(АМО)</a></h1>
+          <!-- <h1><a href="https://github.com/KozakNazar1/ACM2025">ACM(АМО)</a></h1> -->
+	  <h1><a href="acm.html">ACM(АМО)</a></h1>
         </div>
         <div class="col-md-6 col-md-offset-3">
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
