--- a/acm.html
+++ b/acm.html
@@ -87,17 +87,99 @@
 
         <section id="lectures" class="mt-4">
             <h2>Лекції</h2>
-            <div class="accordion" id="lecturesAccordion">
+
+			
+			
+            <div class="accordion" id="courseMaterials">
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lecture1">Тема 1</button></h2>
-                    <div id="lecture1" class="accordion-collapse collapse" data-bs-parent="#lecturesAccordion">
+                    <h2 class="accordion-header" id="lecturesHeading">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#basicLecturesBasicCollapse" aria-expanded="true" aria-controls="basicLecturesBasicCollapse">
+                            Основний цикл лекцій
+                        </button>
+                    </h2>
+                    <div id="basicLecturesBasicCollapse" class="accordion-collapse collapse show" aria-labelledby="lecturesHeading" data-bs-parent="#courseMaterials">
                         <div class="accordion-body">
-                            <a href="#">Матеріали</a>
+                            <div class="accordion" id="lecturesAccordion">
+                                
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1">Частина 1. Тема №1. Вступ до теорії алгоритмів.</button>
+                                    </h2>
+                                    <div id="basicTopic1" class="accordion-collapse collapse" data-bs-parent="#lecturesAccordion">
+                                        <div class="accordion-body">
+                                            <div class="accordion" id="topic1Lectures">
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header">
+                                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture1">Лекція 1</button>
+                                                    </h2>
+                                                    <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#topic1Lectures">
+                                                        <div class="accordion-body">
+                                                            <a href="#">Матеріали</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header">
+                                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture2">Лекція 2</button>
+                                                    </h2>
+                                                    <div id="basicLecture2" class="accordion-collapse collapse" data-bs-parent="#topic1Lectures">
+                                                        <div class="accordion-body">
+                                                            <a href="#">Матеріали</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+								<div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic2">Частина 1. Тема №2. Методи відображення та синтез алгоритмів.</button>
+                                    </h2>
+                                    <div id="basicTopic2" class="accordion-collapse collapse" data-bs-parent="#lecturesAccordion">
+                                        <div class="accordion-body">
+                                            <div class="accordion" id="topic1Lectures">
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header">
+                                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture3">Лекція 3</button>
+                                                    </h2>
+                                                    <div id="basicLecture3" class="accordion-collapse collapse" data-bs-parent="#topic1Lectures">
+                                                        <div class="accordion-body">
+                                                            <a href="#">Матеріали</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                    <h2 class="accordion-header">
+                                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture4">Лекція 4</button>
+                                                    </h2>
+                                                    <div id="basicLecture4" class="accordion-collapse collapse" data-bs-parent="#topic1Lectures">
+                                                        <div class="accordion-body">
+                                                            <a href="#">Матеріали</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+			
+			
         </section>
+		
+		
+		
+		
+		
     </div>
 
     <footer class="bg-dark text-light text-center p-3 mt-4">
