--- a/acm.html
+++ b/acm.html
@@ -320,9 +320,9 @@
                                     </h2>
                                     <div id="additionalTopic10" class="accordion-collapse collapse" data-bs-parent="#additionalLecturesAccordion">
                                         <div class="accordion-body">
-                                            <i>В деяких інтерпретаціях курсу "Алгоритми та методи обчислень"(попередня назва курсу "Алгоритми та моделі обчислень") методи обчислень помилково інтерпретуютсья як чисельні методи.</i>
+                                            <i>В деяких інтерпретаціях курсу "Алгоритми та методи обчислень"(так раніше називався курс "Алгоритми та моделі обчислень") методи обчислень помилково інтерпретуютсья як чисельні методи.</i>
                                             <br>
-										    <i>З метою узгодження навчальної програми з такими "викривленими" інтерпретаціями курсу "Алгоритми та моделі обчислень" на цю тему створено додаткову частину курсу.</i>
+					    <i>З метою узгодження навчальної програми з такими "викривленими" інтерпретаціями курсу "Алгоритми та моделі обчислень" на цю тему створено додаткову частину курсу.</i>
                                             <div class="accordion" id="additionalTopic10Lectures">
 <!-- TODO -->
                                             </div>
