--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Матеріали курсу АМО</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -30,6 +35,11 @@
 
 
         <section id="lectures" class="mt-4">
+		
+        <div class="accordion-item mt-3">
+            <button class="accordion-button bg-light" onclick="goBack()">Назад</button>
+        </div>
+		
 <h3>Частина 1. Тема №1. Вступ до теорії алгоритмів</h3>
 <br>			
 1.1. Неформальне тлумачення алгоритму. 
