--- a/acm.html
+++ b/acm.html
@@ -114,7 +114,7 @@
                                                     </h2>
                                                     <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1Lectures">
                                                         <div class="accordion-body">
-                                                            <a href="acm_basicTopic1">Опис</a> | <a href="#">Матеріали</a>
+                                                            <a href="acm_basicTopic1.html">Опис</a> | <a href="#">Матеріали</a>
                                                         </div>
                                                     </div>
                                                 </div>
