--- a/acm.html
+++ b/acm.html
@@ -11,7 +11,7 @@
         <div class="container">
             <!-- <a class="navbar-brand" href="index.html">Головна</a> -->
             <a class="navbar-brand" href="https://kozaknazar.github.io/">Головна</a>
-            <a class="navbar-brand" href="https://github.com/KozakNazar1/ACM2025">Матеріали</a>
+            <a class="navbar-brand" href="acm.html">АМО</a>
             <a class="navbar-brand" href="https://vns.lpnu.ua/">ВНС</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
