--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- <a class="navbar-brand" href="index.html">Головна</a> -->
             <a class="navbar-brand" href="https://kozaknazar.github.io/">Головна</a>
-            <a class="navbar-brand" href="https://github.com/KozakNazar1/ACM2025">Матеріали</a>
+            <a class="navbar-brand" href="acm.html">АМО</a>
             <a class="navbar-brand" href="https://vns.lpnu.ua/">ВНС</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -33,12 +33,21 @@
         </div>
     </nav>
 
+<!--         <div class="accordion-item mt-4">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </div> -->
+
+        <div class="accordion-item mt-4">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </div>
+		
 
         <section id="lectures" class="mt-4">
 		
-        <div class="accordion-item mt-3">
-            <button class="accordion-button bg-light" onclick="goBack()">Назад</button>
-        </div>
 		
 <h3>Частина 1. Тема №1. Вступ до теорії алгоритмів</h3>
 <br>			
@@ -154,8 +163,17 @@
 			
         </section>
 		
-		
-		
+<!--         <div class="accordion-item mt-4">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </div> -->
+
+        <div class="accordion-item mt-4">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </div>	
 		
 		
     </div>
