--- a/acm.html
+++ b/acm.html
@@ -107,6 +107,7 @@
                                     </h2>
                                     <div id="basicTopic1" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
+                                            <p><a href="acm_basicTopic1.html">Опис</a> | <a href="#">Різне</a></p>										
                                             <div class="accordion" id="basicTopic1Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
@@ -114,7 +115,7 @@
                                                     </h2>
                                                     <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1Lectures">
                                                         <div class="accordion-body">
-                                                            <a href="acm_basicTopic1.html">Опис</a> | <a href="#">Матеріали</a>
+                                                            <a href="#">Матеріали</a>
                                                         </div>
                                                     </div>
                                                 </div>
