--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -32,19 +32,21 @@
             </div>
         </div>
     </nav>
-
-<!--         <div class="accordion-item mt-4">
+	
+	<div class="container mt-4">
+	
+<!--         <section id="update_state">
             <h2 class="accordion-header">
                 <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
             </h2>
-        </div> -->
-
-        <div class="accordion-item mt-4">
+        </section> -->
+	
+        <section id="back_section_1">
             <h2 class="accordion-header">
                 <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
             </h2>
-        </div>
-		
+        </section>
+	
 
         <section id="lectures" class="mt-4">
 		
@@ -163,18 +165,21 @@
 			
         </section>
 		
-<!--     <div class="accordion-item mt-4">
-        <h2 class="accordion-header">
-            <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
-        </h2>
-    </div> -->
+<!--         <section id="back_section_2">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366; border: 1px solid #007bff;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section> -->
+	
+	    <p/>
+	
+        <section id="back_section_2">
+            <h2 class="accordion-header">
+                <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
+            </h2>
+        </section>	
 
-    <div class="accordion-item mt-4">
-        <h2 class="accordion-header">
-            <button class="accordion-button" style="background-color: #cce5ff; color: #003366;" type="button" onclick="goBack()"><h3 class="fs-5">Назад</h3></button>
-        </h2>
-    </div>	
-		
+    </div>		
 
     <footer class="bg-dark text-light text-center p-3 mt-4">
         <!-- <p>&copy; 2025 Алгоритми та моделі обчислень</p> -->
