--- a/acm.html
+++ b/acm.html
@@ -29,6 +29,10 @@
     </nav>
 
     <div class="container mt-4">
+        <section id="update_state">
+            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутня.</h2>
+        </section>
+	
         <section id="labs">
             <h2>Лабораторні роботи</h2>
             <div class="accordion" id="labsAccordion">
