--- a/acm.html
+++ b/acm.html
@@ -12,7 +12,7 @@
             <!-- <a class="navbar-brand" href="index.html">Головна</a> -->
             <a class="navbar-brand" href="https://kozaknazar.github.io/">Головна</a>
             <a class="navbar-brand" href="acm.html">АМО</a>
-            <a class="navbar-brand" href="https://vns.lpnu.ua/">ВНС</a>
+            <a class="navbar-brand" href="https://vns.lpnu.ua/course/view.php?id=4594">ВНС</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
