--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	  <!-- <a href="http://github.com/KozakNazar1/acm2025">ACM(АМО)</a> -->
 	  <a href="acm.html">ACM(АМО)</a>	
 	  <a href="http://github.com/kozaknazar">Перейти до GitHub</a>
-	  <a href="http://github.com/KozakNazar1/cpscad2021">CSCAD</a>	    
+	  <a href="cscad.html">CSCAD(АПКС)</a>	    
 	  <a href="http://github.com/KozakNazar1/sp2019_soft__12345/tree/master/sp2021_wFolders">SP(СП)</a>		    	    	  
       <a href="#services" class="smoothscroll">Курси</a>
       <a href="#portfolio" class="smoothscroll">Галерея</a>	  
@@ -65,7 +65,7 @@
           <h1><a href="http://github.com/kozaknazar?tab=repositories">GitHub</a></h1>
         </div>	      
         <div class="col-md-6 col-md-offset-3">
-          <h1><a href="http://github.com/KozakNazar1/cpscad2021">CSCAD(АПКС)</a></h1>
+          <h1><a href="cscad.html">CSCAD(АПКС)</a></h1>
         </div>		
       </div>
     </div>
