--- a/cscad.html
+++ b/cscad.html
@@ -20,7 +20,7 @@
 
 	
         <section id="update_state">
-            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутня.</h2>
+            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</h2>
         </section>
 
         <section id="lectures" class="mt-4">
