--- a/acm.html
+++ b/acm.html
@@ -30,7 +30,7 @@
 
     <div class="container mt-4">
         <section id="update_state">
-            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутня.</h2>
+            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</h2>
         </section>
 	
         <section id="labs">
