--- a/cscad.html
+++ b/cscad.html
@@ -41,16 +41,16 @@
                                 
 								<div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1">Теми №1 та №2. Вступ до дисципліни. Основи систем автоматизованого проектування</button>
+                                        <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic1BasicTopic2">Теми №1 та №2. Вступ до дисципліни. Основи систем автоматизованого проектування</button>
                                     </h2>
-                                    <div id="basicTopic1" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
+                                    <div id="basicTopic1BasicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">									
                                             <div class="accordion" id="basicTopic1Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture1">Лекція 1</button>
                                                     </h2>
-                                                    <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1Lectures">
+                                                    <div id="basicLecture1" class="accordion-collapse collapse" data-bs-parent="#basicTopic1BasicTopic2Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
@@ -60,7 +60,7 @@
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture2">Лекція 2</button>
                                                     </h2>
-                                                    <div id="basicLecture2" class="accordion-collapse collapse" data-bs-parent="#basicTopic1Lectures">
+                                                    <div id="basicLecture2" class="accordion-collapse collapse" data-bs-parent="#basicTopic1BasicTopic2Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
@@ -76,14 +76,14 @@
                                     <h2 class="accordion-header">
                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicTopic3">Тема №3. Високорівневе проектування комп`ютерних систем та автоматичний синтез до нищих рівнів.</button>
                                     </h2>
-                                    <div id="basicTopic2" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
+                                    <div id="basicTopic3" class="accordion-collapse collapse" data-bs-parent="#basicLecturesAccordion">
                                         <div class="accordion-body">
                                             <div class="accordion" id="basicTopic2Lectures">
                                                 <div class="accordion-item">
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture3">Лекція 3</button>
                                                     </h2>
-                                                    <div id="basicLecture3" class="accordion-collapse collapse" data-bs-parent="#basicTopic1Lectures">
+                                                    <div id="basicLecture3" class="accordion-collapse collapse" data-bs-parent="#basicTopic3Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
@@ -93,7 +93,7 @@
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture4">Лекція 4</button>
                                                     </h2>
-                                                    <div id="basicLecture4" class="accordion-collapse collapse" data-bs-parent="#basicTopic2Lectures">
+                                                    <div id="basicLecture4" class="accordion-collapse collapse" data-bs-parent="#basicTopic3Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
@@ -103,7 +103,7 @@
                                                     <h2 class="accordion-header">
                                                         <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#basicLecture5">Лекція 5</button>
                                                     </h2>
-                                                    <div id="basicLecture5" class="accordion-collapse collapse" data-bs-parent="#basicTopic2Lectures">
+                                                    <div id="basicLecture5" class="accordion-collapse collapse" data-bs-parent="#basicTopic3Lectures">
                                                         <div class="accordion-body">
                                                             <a href="#">Матеріали</a>
                                                         </div>
