--- a/cscad_basicTopic4.html
+++ b/cscad_basicTopic4.html
@@ -17,7 +17,7 @@
             <!-- <a class="navbar-brand" href="index.html">Головна</a> -->
             <a class="navbar-brand" href="https://kozaknazar.github.io/">Головна</a>
             <a class="navbar-brand" href="cscad.html">АПКС</a>
-            <a class="navbar-brand" href="https://vns.lpnu.ua/">ВНС</a>
+            <a class="navbar-brand" href="https://vns.lpnu.ua/course/view.php?id=8452">ВНС</a>
         </div>
     </nav>
 	
