--- a/acm_basicTopic1.html
+++ b/acm_basicTopic1.html
@@ -23,11 +23,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#labs">Лабораторні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#practicals">Практичні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#tests">Контрольні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#homeworks">Домашні</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#lectures">Лекції</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acm.html#labs">Лабораторні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acm.html#practicals">Практичні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acm.html#tests">Контрольні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acm.html#homeworks">Домашні</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acm.html#lectures">Лекції</a></li>
                 </ul>
             </div>
         </div>
