--- a/acm.html
+++ b/acm.html
@@ -30,20 +30,83 @@
 
     <div class="container mt-4">
         <section id="update_state">
-            <h2>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</h2>
+            <h2><i>Увага! Курс перебуває в стані оновлення, більшість матеріалів поки відсутні.</i></h2>
         </section>
 	
         <section id="labs">
-            <h2>Лабораторні роботи</h2>
+            <h2>Лабораторні заняття</h2>
+			<i>Увага! Курс перебуває в стані оновлення, наразі доступні матеріали лабораторних занять минулих років.</i>
+			<p>
             <div class="accordion" id="labsAccordion">
                 <div class="accordion-item">
-                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab1">Лабораторна 1</button></h2>
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab1">Лабораторна №1</button></h2>
                     <div id="lab1" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
-                            <a href="#">Опис</a> | <a href="#">Код</a>
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab1/acmLab1.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab1/blob/master/acmlab1.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab1/raw/refs/heads/acmlab1.cpp">Зразок коду одним файлом*(скачати)</a>
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab2">Лабораторна №2</button></h2>
+                    <div id="lab2" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
+                        <div class="accordion-body">
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab2/acmLab2.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab2/blob/master/acmlab2.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab2/raw/refs/heads/acmlab2.cpp">Зразок коду одним файлом*(скачати)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab3">Лабораторна №3</button></h2>
+                    <div id="lab3" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
+                        <div class="accordion-body">
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab3/acmLab3.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab3/blob/master/acmlab3.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab3/raw/refs/heads/acmlab3.cpp">Зразок коду одним файлом*(скачати)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab4">Лабораторна №4</button></h2>
+                    <div id="lab4" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
+                        <div class="accordion-body">
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab4/acmLab4.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab4/blob/master/acmlab4.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab4/raw/refs/heads/acmlab4.cpp">Зразок коду одним файлом*(скачати)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab5">Лабораторна №5</button></h2>
+                    <div id="lab5" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
+                        <div class="accordion-body">
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab5/acmLab5.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab5/blob/master/acmlab5.cpp">Зразок коду одним файлом*(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab5/raw/refs/heads/acmlab5.cpp">Зразок коду одним файлом*(скачати)</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#lab6">Лабораторна №6</button></h2>
+                    <div id="lab6" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
+                        <div class="accordion-body">
+                            <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
+						  | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі коду)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab6/raw/refs/heads/acmlab6__with_rxcpp_src.cpp">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі коду)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab6/tree/master/nonpacked">Зразок коду(відкрити на GitHub теку, що містить файл та бібліотеку ReactiveX)</a>
+						  | <a href="https://github.com/KozakNazar/srcacmlab6/blob/master/nonpacked/acmlab6.cpp">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
+                        </div>
+                    </div>
+                </div>
+			<i>*зразки коду для кожного завдання створенні одним файлом для максимальної простоти використання студентам, що поки лише розвивають свої здібності використання компіляторів та інтегрованих середовищ програмування</i>				
             </div>
         </section>
 
@@ -62,7 +125,7 @@
         </section>
 
         <section id="tests" class="mt-4">
-            <h2>Контрольні роботи</h2>
+            <h2>Лекційні контрольні роботи</h2>
             <div class="accordion" id="testsAccordion">
                 <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#test1">Контрольна 1</button></h2>
@@ -76,7 +139,7 @@
         </section>
 
         <section id="homeworks" class="mt-4">
-            <h2>Домашні завдання</h2>
+            <h2>Лекційні домашні завдання</h2>
             <div class="accordion" id="homeworksAccordion">
                 <div class="accordion-item">
                     <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#hw1">Домашнє 1</button></h2>
