--- a/acm.html
+++ b/acm.html
@@ -118,9 +118,9 @@
                     <div id="lab6" class="accordion-collapse collapse" data-bs-parent="#labsAccordion">
                         <div class="accordion-body">
                                                       <a href="https://github.com/KozakNazar1/ACM2025/blob/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(відкрити на GitHub)</a>
-						                            | <a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a>
-						                            | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі коду)</a>
-						                            | <a href="https://github.com/KozakNazar/srcacmlab6/raw/refs/heads/master/acmlab6__with_rxcpp_src.cpp">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі коду)</a>
+						                         | <b><a href="https://github.com/KozakNazar1/ACM2025/raw/refs/heads/main/labs/acmlab6/acmLab6.pdf">Відомості та завдання(скачати)</a></b>
+						                            | <a href="https://github.com/KozakNazar/srcacmlab6/">Зразок коду одним файлом*(відкрити на GitHub теку, що містить файл, код бібліотеки ReactiveX міститься у файлі)</a>
+					   | <b><a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/acmlab6__with_rxcpp_src.cpp', 'cmlab6__with_rxcpp_src.cpp'); return false;">Зразок коду одним файлом*(скачати, код бібліотеки ReactiveX міститься у файлі)</a></b>
 						                            | <a href="https://github.com/KozakNazar/srcacmlab6/tree/master/nonpacked">Зразок коду(відкрити на GitHub теку, що містить файл та бібліотеку ReactiveX)</a>
 						  | <a href="#" onclick="downloadFile('https://raw.githubusercontent.com/KozakNazar/srcacmlab6/master/nonpacked/acmlab6.cpp', 'acmlab6.cpp'); return false;">Зразок коду(скачати, потрібно самостійно встановити бібліотеки ReactiveX)</a>
                         </div>
